# dick-detection-app

./: .eslintrc.js  .gcloudignore  .gitignore  CMakeLists.txt  README  README.md  app.yaml  build.sh  ca.crt  ca.key  cert.crt  cert.key  globals.d.ts  index.html  index.js  index.scss  index.tsx  mixins.scss  package-lock.json  package.json  robots.txt  routes.tsx  setup.sh  sitemap.xml  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
bindings/: SampleBindings.cpp
cpp/: Sample.cpp  Sample.h  Yolo.cpp  duckpuc-ios-new.cpp  duckpuc-ios-old.cpp  duckpuc-ios.cpp  duckpuc.cpp  duckpuc.h  model-helpers.cpp  model-helpers.h  model-ios-new.cpp  model-ios-old.cpp  model.cpp  model.h
cpp/assets/: yolo-fastest-opt.param
cpp/ncnn-base/include/ncnn/: platform.h
cpp/ncnn-base/lib/pkgconfig/: ncnn.pc
cpp/ncnn-ios-new/include/ncnn/: platform.h
cpp/ncnn-ios-new/lib/cmake/ncnn/: ncnn.cmake
cpp/ncnn-ios-new/lib/pkgconfig/: ncnn.pc
cpp/ncnn-ios-old/include/ncnn/: platform.h
cpp/ncnn-ios-old/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
cpp/ncnn-ios-old/lib/pkgconfig/: ncnn.pc
cpp/ncnn-ios/include/ncnn/: platform.h
cpp/ncnn-ios/lib/pkgconfig/: ncnn.pc
cpp/ncnn/include/ncnn/: platform.h
cpp/ncnn/lib/pkgconfig/: ncnn.pc
public/: Sample.js  duckpuc-ios-new.data  duckpuc-ios-new.js  duckpuc-ios-new.wasm  duckpuc-ios-new.worker.js  duckpuc-ios-old.js  duckpuc-ios-old.wasm  duckpuc-ios.js  duckpuc-ios.wasm  duckpuc.js  duckpuc.wasm  duckpuc.worker.js
public/fonts/knewave/: stylesheet.css
src/: App.css  App.js  app.js  app.scss  app.tsx  cameraDetector.tsx  camera_detection.js  camera_detector.scss  camera_detector.tsx  detect_yolo.js  home.scss  home.tsx  snapEditor.scss  snapEditor.tsx  snap_editor.scss  snap_editor.tsx  splashScreen.scss  splashScreen.tsx  splash_screen.scss  splash_screen.tsx  types.ts  use_yolo.js
src/components/: about_modal.tsx  camera_app.css  camera_app.js  carousel.scss  carousel.tsx  coffee.scss  coffee.tsx  debug.tsx  error_modal.tsx  footer.scss  footer.tsx  header.css  header.js  header.scss  header.tsx  index.ts  logo.tsx  modals.scss  privacy_policy.html  privacy_policy.tsx  terms.html  terms.tsx  terms_privacy.scss
src/filters/: frame.scss  frame.tsx  genetleman.tsx  glasses.tsx  grass.scss  grass.tsx  hearts.tsx  hipster.tsx  index.scss  index.tsx  mustache.tsx  rain.tsx  santa.tsx  types.ts
src/filters/fuckoff/: fuckoff.tsx  index.ts
src/filters/gentleman/: gentleman.tsx  index.ts
src/filters/grass/: grass.tsx  index.ts
src/filters/hearts/: hearts.tsx  index.ts
src/filters/hipster/: hipster.tsx  index.ts
src/filters/rain/: index.ts  rain.tsx
src/filters/santa/: index.ts  santa.scss  santa.tsx
src/filters/thuglife/: index.ts  thuglife.tsx
src/filters/troll/: index.ts  troll.tsx
src/helpers/: copy_to_canvas.ts  detectYolo.ts  detect_yolo.ts  drawDetections.ts  draw_detections.ts  index.ts  is_wasm_loaded.ts  loadPhotoToCanvas.tsx  load_scaled_photo.tsx  ml_helpers.ts  pipelineHelpers.ts  renderingPipelineHelper.ts  segmentationHelper.ts  sourceHelper.ts  types.ts
src/hooks/: index.tsx  useMLModule.ts  useRenderingPipeline.ts  useTFLite.ts  useWasmFeatures.ts  useYolo.ts  use_analytics.tsx  use_yolo.ts
src/pipelines/: index.ts
src/pipelines/canvas2d/: canvas2dMeetPipeline.ts  canvas2dPipeline.ts  canvas2dYoloPipeline.ts
tools/: ncnn_build.sh  ncnn_update.sh  shrink-empty-pixels.py  wasm_build.sh
